Highcharts are now working, including the target selector etc. Plus some tidied up CSS

--- a/app/assets/stylesheets/home.css.scss.erb
+++ b/app/assets/stylesheets/home.css.scss.erb
@@ -5,16 +5,20 @@
 label.checker {
 	text-align: center;
 }
+
 th.checker {
 	text-align: center;
 }
+
 td.checker {
 	text-align: center;
 	vertical-align: middle;
 }
+
 th.rating {
 	text-align: center;
 }
+
 td.rating {
 	font-size: 28px;
 	text-align: center;
@@ -26,8 +30,19 @@ td.rating {
 td.question {
 	vertical-align: middle;
 }
+
 caption {
 	font-size: 20px;
 	font-weight: bolder;
 	padding-bottom: 10px;
+}
+
+#graphycontainer {
+	/*width: 500px;*/
+	width: 80%;
+	height: 1000px;
+}
+
+p.centralise {
+	text-align: center;
 }
