--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -622,6 +622,7 @@
 <%= javascript_include_tag "bootstrap.min" %>
 <%= javascript_include_tag "highcharts" %>
 <%= javascript_include_tag "ssa" %>
+<%= javascript_include_tag "jquery.cookie" %>
 
 <script>
 
