JQuery logic to save and load state from cookies

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -660,6 +660,11 @@ $(document).ready(function() {
 		SelectTarget($(this).attr('value'));
 	});
 
+	//Enable json cookies
+	$.cookie.json = true;
+
+	//Nom those cookies
+	LoadCookies();
 });
 
 </script>
