--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -343,6 +343,9 @@ $(document).ready(function() {
 	//Enable json cookies
 	$.cookie.json = true;
 
+
+	ImSoPretty();
+
 	//Nom those cookies
 	LoadCookies();
 });
