--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,34 @@
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div class="control-group">
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+ 	<%= f.label :email, :class => "control-label" %>
+ 	<div class="controls">
+  		<%= f.email_field :email %>
+  	</div>
+  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="control-group">
+
+  <%= f.label :password, :class => "control-label" %>
+  <div class="controls">
+  	<%= f.password_field :password %>
+  </div>
+</div>
+
+<div class="control-group">
+
+  <%= f.label :password_confirmation, :class => "control-label" %>
+  <div class="controls">
+  	<%= f.password_field :password_confirmation %>
+  </div>
+</div>
+
+<div class="modal-footer">
+	<button type="submit" class="btn btn-primary btn-inverse">Sign Up</button>
+	<button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Cancel</button>
+</div>
 
 <% end %>
 
