--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,15 @@
 		</div>
 	</div>
 
+	<div id="messageModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="Herp" aria-hidden="true">
+		<div class="modal-header">
+		</div>
+		<div class="modal-body">
+		</div>
+		<div class="modal-footer">
+		</div>
+	</div>
+
 	
 
 <%= yield %>
