--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,50 @@
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name)) do |f| %>
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => {:class => "form-horizontal", :id => "forgotten-password-form"}) do |f| %>
+
+	<div class="control-group">
+  <%= f.label :email, :class => "control-label" %>
+  		<div class="controls">
+  			<%= f.email_field :email %>
+  		</div>
+  	</div>
+
+  	<div class="modal-footer">
+		<button type="submit" class="btn btn-primary btn-inverse" id="forgotten-password-button">Fetch Password Reset</button>
+		<button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Cancel</button>
+	</div>
+
+<script>
+$('#forgotten-password-button').on('click',function(e) {
+  e.preventDefault();
+  var jxhr = $.post($('#forgotten-password-form').attr('action'),
+      {
+          utf8: $('#forgotten-password-form > div > input[name=utf8]').val(),
+          authenticity_token: $('#forgotten-password-form > div > input[name=authenticity_token]').val(),
+          user: {
+              email: $('#forgotten-password-form input#user_email').val()
+          }
+      },
+      function(data) {
+          if (data['error'] == "Success")  {
+	      	  $('#messageModal > .modal-header').html('<h3>Success</h3>');
+	          $('#messageModal > .modal-body').html('<p>Please check your email for password reset instructions ..</p>');
+	          $('#messageModal > .modal-footer').html('<button class="btn btn-inverse btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>');
+	          $('#forgottenPasswordModal').modal('hide');
+	          $('#forgottenPasswordModal input#user_email').val('');
+	          $('#messageModal').modal('show');
+          }
+      },
+      'json'
+  )
+  .error(function() {
+    $('#messageModal > .modal-header').html('<h3>Error</h3>');
+    $('#messageModal > .modal-body').html('<p>Herp</p>');
+    $('#messageModal > .modal-footer').html('<button class="btn btn-inverse btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>');
+    $('#forgottenPasswordModal').modal('hide');
+    $('#forgottenPasswordModal input#user_email').val('');
+    $('#messageModal').modal('show');
+  });
+});
+</script>
 
 <% end %>
 
