--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal"}) do |f| %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:class => "form-horizontal", :id => "new-registration-form"}) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="control-group">
@@ -26,10 +26,51 @@
 </div>
 
 <div class="modal-footer">
-	<button type="submit" class="btn btn-primary btn-inverse">Sign Up</button>
+	<button type="submit" class="btn btn-primary btn-inverse" id="signup-button">Sign Up</button>
 	<button class="btn btn-inverse" data-dismiss="modal" aria-hidden="true">Cancel</button>
 </div>
 
+<script>
+$('#signup-button').on('click',function(e) {
+  e.preventDefault();
+  var jxhr = $.post($('#new-registration-form').attr('action'),
+      {
+          utf8: $('#new-registration-form > div > input[name=utf8]').val(),
+          authenticity_token: $('#new-registration-form > div > input[name=authenticity_token]').val(),
+          user: {
+              email: $('#new-registration-form input#user_email').val(),
+              password: $('#new-registration-form input#user_password').val(),
+              password_confirmation: $('#new-registration-form input#user_password_confirmation').val()
+          }
+      },
+      function(data) {
+          if ((data['error'] == "Success") && (data['message'] == "Logged in"))  {
+              location.reload();
+          } else {
+              $('#messageModal > .modal-header').html('<h3>Success</h3>');
+              $('#messageModal > .modal-body').html('<p>Please check your email for a Confirmation link. Once submitted, you can Log in ..</p>');
+              $('#messageModal > .modal-footer').html('<button class="btn btn-inverse btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>');
+              $('#registerModal').modal('hide');
+              $('#registerModal input#user_email').val('');
+              $('#registerModal input#user_password').val('');
+              $('#registerModal input#user_password_confirmation').val('');
+              $('#messageModal').modal('show');
+          }
+      },
+      'json'
+  )
+  .error(function() {
+    $('#messageModal > .modal-header').html('<h3>Error</h3>');
+    $('#messageModal > .modal-body').html('<p>Something went pop! ..</p>');
+    $('#messageModal > .modal-footer').html('<button class="btn btn-inverse btn-primary" data-dismiss="modal" aria-hidden="true">Close</button>');
+    $('#registerModal').modal('hide');
+    $('#registerModal input#user_email').val('');
+    $('#registerModal input#user_password').val('');
+    $('#registerModal input#user_password_confirmation').val('');
+    $('#messageModal').modal('show');
+  });
+});
+</script>
 <% end %>
 
 <%= render "links" %>
