--- a/app/views/devise/_links.erb
+++ b/app/views/devise/_links.erb
@@ -3,7 +3,9 @@
   <a href="#" id="linksloginlink">Login instead?</a><br />
   <script>
   	$('#linksloginlink').on("click", function() {
-      $(this).closest('.modal').modal('hide');
+      alert($(this).closest('.modal').attr('id'));
+      $(this).closest('.modal.in').modal('hide');
+      //$('.modal').modal('hide');
       $('#loginModal').modal('show');
   	});
   </script>
@@ -13,7 +15,9 @@
 	<a href="#" id="linkssignuplink">Sign Up instead?</a><br />
 	<script>
 	 $('#linkssignuplink').on("click", function() {
+    alert($(this).closest('.modal.in').attr('id'));
     $(this).closest('.modal').modal('hide');
+    //$('.modal').modal('hide');
     $('#registerModal').modal('show');
    })	
 	</script>
@@ -23,7 +27,9 @@
   <a href="#" id="linkspasswordlink">Forgot your password?</a><br />
   <script>
     $('#linkspasswordlink').on("click", function() {
-      $(this).closest('.modal').modal('hide');
+      alert($(this).closest('.modal').attr('id'));
+      $(this).closest('.modal.in').modal('hide');
+      //$('.modal').modal('hide');
       $('#forgottenPasswordModal').modal('show');
     });
   </script>
@@ -33,7 +39,10 @@
   <a href="#" id="linksunlocklink">Didn't receive confirmation instructions?</a><br />
   <script>
     $('#linksunlocklink').on("click", function() {
-      ShowConfirmationDialog('<%= new_user_confirmation_path %>')
+      alert($(this).closest('.modal').attr('id'));
+      $(this).closest('.modal.in').modal('hide');
+      //$('.modal').modal('hide');
+      $('#resendConfirmationModal').modal('show');
     });
    </script>
 <% end -%>
