Updated the javascript include to use the asset application.js file

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -298,11 +298,7 @@
 
 </script>
 
-<%= javascript_include_tag "jquery" %>
-<%= javascript_include_tag "bootstrap.min" %>
-<%= javascript_include_tag "highcharts" %>
-<%= javascript_include_tag "ssa" %>
-<%= javascript_include_tag "jquery.cookie" %>
+<%= javascript_include_tag "application" %>
 
 <script>
 
