Prettier load functions on the modal dialogs and buttons etc

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -16,6 +16,7 @@
 <script>
 $('#confirmation-resend-button').on('click',function(e) {
   e.preventDefault();
+  $(this).addClass('loading disabled');
   var jxhr = $.post($('#confirmation-resend-form').attr('action'),
       {
           utf8: $('#confirmation-resend-form > div > input[name=utf8]').val(),
