--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,10 @@
 			<h3>Sign In</h3>
 		</div>
 		<div class="modal-body">
+			<h3>Loading</h3>
+			<div class="progress progress-striped active">
+				<div class="bar" style="width: 100%"></div>
+			</div>
 		</div>
 	</div>
 
@@ -73,6 +77,10 @@
 			<h3>Register</h3>
 		</div>
 		<div class="modal-body">
+			<h3>Loading</h3>
+			<div class="progress progress-striped active">
+				<div class="bar" style="width: 100%"></div>
+			</div>
 		</div>
 	</div>
 
@@ -81,6 +89,10 @@
 			<h3>Forgot your password huh?</h3>
 		</div>
 		<div class="modal-body">
+			<h3>Loading</h3>
+			<div class="progress progress-striped active">
+				<div class="bar" style="width: 100%"></div>
+			</div>
 		</div>
 	</div>
 
@@ -89,6 +101,10 @@
 			<h3>Resend password confirmation</h3>
 		</div>
 		<div class="modal-body">
+			<h3>Loading</h3>
+			<div class="progress progress-striped active">
+				<div class="bar" style="width: 100%"></div>
+			</div>
 		</div>
 	</div>
 
@@ -96,6 +112,10 @@
 		<div class="modal-header">
 		</div>
 		<div class="modal-body">
+			<h3>Loading</h3>
+			<div class="progress progress-striped active">
+				<div class="bar" style="width: 100%"></div>
+			</div>
 		</div>
 		<div class="modal-footer">
 		</div>
