--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,5 @@
 .btn.loading {
-    background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, rgba(0, 0, 0, 10)), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, rgba(0, 0, 0, 10)), color-stop(.75, rgba(0, 0, 0, 10)), color-stop(.75, transparent), to(transparent));
+    background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, rgba(0, 0, 0, .50)), color-stop(.25, transparent),color-stop(.5, transparent), color-stop(.5, rgba(0, 0, 0, .50)), color-stop(.75, rgba(0, 0, 0, .50)), color-stop(.75, transparent), to(transparent));
     background-image: -moz-linear-gradient(-45deg, rgba(0, 0, 0, .10) 25%, transparent 25%,transparent 50%, rgba(0, 0, 0, .10) 50%, rgba(0, 0, 0, .10) 75%, transparent 75%, transparent);
     background-size: 50px 50px;
     -moz-background-size: 50px 50px;
