Updated rails - started work on fixing the new jQuery broken stuff. Cookie stuff seemed to have died

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -333,7 +333,7 @@ $(document).ready(function() {
 
 	//This is the logic for the target selector on the scorecard tab
 	$('#targetselectah').on('change',function() {
-		SelectTarget($(this).attr('value'));
+		SelectTarget($(this).val());
 	});
 
 	//Enable json cookies
