Added footer to allow for displaying and changing how state is stored

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -127,10 +127,10 @@
 		</div>	
 		<div class="modal-body">
 			<p>Hi,</p>
-			<p>It looks like you've never saved your data before in the SAMM Self Assessment Tool. We're keen to ensure that you don't lose you're data, but, we're also keen to ensure that it remains safe. So we thought we would give you some options</p>
-			<p>If you don't want to store your data in cookies or online, sure, choose '<strong>Do Nothing</strong>'. But, if you refresh the page, it'll all be gone!</p>
-			<p>If you just want to store it in your cookies, select '<strong>Cookies</strong>'.</p>
-			<p>And finally, if you want to maintain your data online, select '<strong>Online</strong>'. Mind you, you will have to create an account first.</p>
+			<p>We're keen to ensure that you don't lose you're data, but, we're also keen to ensure that it remains safe. So we thought we would give you some options</p>
+			<p>1. If you don't want to store your data in cookies or online, sure, choose '<strong>Do Nothing</strong>'. But, if you refresh the page, it'll all be gone!</p>
+			<p>2. If you just want to store it in your cookies, select '<strong>Cookies</strong>'.</p>
+			<p>3. And finally, if you want to maintain your data online, select '<strong>Online</strong>'. Mind you, you will have to create an account first.</p>
 		</div>
 		<div class="modal-footer">
 			<button class="btn btn-inverse btn-primary" id="state-nothing">Do Nothing</button>
