--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -248,6 +248,11 @@
 <p><%= raw t('astabouttext') %></p>
 <p><a href="#topderp" class="scroll">Back to top</a></p>
 
+<p></p>
+
+<div id="bottomderp" class="well well-small">
+</div>
+
 <script>
 
 	var chart1;
@@ -345,15 +350,24 @@ $(document).ready(function() {
 	if (StateChecker() == null) {
 		//Okay, we dont' know how to maintain state, lets do nothing
 
+		//Well, do something, update the footer to mention that we're not recording state
+		SetFooterContent(null);
+
 	} else if (StateChecker() == "pleasedont") {
 		//They've explicitly asked to not store the state at all
 
 		//Do Nufink
+
+		//Well, update that footer..
+		SetFooterContent("pleasedont");
+
 	} else if (StateChecker() == "cookies") {
 		//Okay, looks like they're in cookies
 
 		//Nom them
 		LoadCookies();
+
+		SetFooterContent("cookies");
 	}
 });
 
