Removed login UI elements

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 				<% else %>
 				<!-- <li><a href="#loginModal" id="login-link" data-toggle="modal">Login</a></li>
 				<li><a href="#registerModal" id="signup-link" data-toggle="modal">Sign Up</a></li> -->
-				<li>
+				<!-- <li>
 					<button class="btn btn-small btn-inverse" href="#loginModal" data-toggle="modal">Login</button>
 				</li>
 				<li class="divider-vertical"></li>
@@ -54,7 +54,7 @@
 						</ul>
 
 					</div>
-				</li>
+				</li> -->
 				<% end %>
 			</ul>
 		</div>
@@ -130,12 +130,12 @@
 			<p>We're keen to ensure that you don't lose you're data, but, we're also keen to ensure that it remains safe. So we thought we would give you some options</p>
 			<p>1. If you don't want to store your data in cookies or online, sure, choose '<strong>Do Nothing</strong>'. But, if you refresh the page, it'll all be gone!</p>
 			<p>2. If you just want to store it in your cookies, select '<strong>Cookies</strong>'.</p>
-			<p>3. And finally, if you want to maintain your data online, select '<strong>Online</strong>'. Mind you, you will have to create an account first.</p>
+			<!-- <p>3. And finally, if you want to maintain your data online, select '<strong>Online</strong>'. Mind you, you will have to create an account first.</p> -->
 		</div>
 		<div class="modal-footer">
 			<button class="btn btn-inverse btn-primary" id="state-nothing">Do Nothing</button>
 			<button class="btn btn-inverse" id="state-cookies">Cookies</button>
-			<button class="btn btn-inverse" id="state-db">Online</button>
+			<!-- <button class="btn btn-inverse" id="state-db">Online</button> -->
 		</div>
 	</div>
 
