--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -391,6 +391,10 @@ $(document).ready(function() {
 	//Update the footer
 	SetFooterContent("online");
 
+	//Kick off the timer.. it recursively calls itself
+	pushURL = '<%= create_assessment_path %>';
+	ssa_timer = window.setTimeout(timerFunction,5000);
+
 	//Bind a beforeunload event to check that the database and local dom is in sync first, and warn if not
 	$(window).bind('beforeunload', function() {
 		//if something return 'warning'
