Tidied up some of the UI stuff, updated links, text etc

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,8 @@
 			<a href="/" class="brand">SAMM Self Assessment</a>
 			<ul class="nav">
 				<li><a href="#about" class="scroll">About</a></li>
-				<li><a href="#ast" class="scroll">AST</a></li>
-				<li><a href="http://labs.asteriskinfosec.com.au">Labs</a></li>
+				<li><a href="http://asterisklabs.github.io/">Asterisk Security Toolkit</a></li>
+				<li><a href="http://labs.asteriskinfosec.com.au">Blog</a></li>
 			</ul>
 			<ul class="nav pull-right">
 				<% if user_signed_in? %>
@@ -134,7 +134,7 @@
 		</div>
 	</div>
 
-	<div id="loadingModal" class="modal hide fade" tabindex="-1" role="dialog" area-labelledby="Something" aria-hidden="true">
+	<div id="loadingModal" class="modal hide" tabindex="-1" role="dialog" area-labelledby="Something" aria-hidden="true">
 		<div class="modal-header">
 			<h3>Loading</h3>
 		</div>
