--- a/app/views/targets/index.html.erb
+++ b/app/views/targets/index.html.erb
@@ -169,8 +169,9 @@ $('#new-target-button').on('click',function(e) {
           },
           function(data) {
               if (data['error'] == "success") {
-                  //location.reload();
-                  //console.log(data);
+              	    //Load up the latest target
+				    LoadTargets('<%= fetch_targets_path %>');
+				    
                   	$('#newTargetModal').modal('hide');
 				    $('#new-target-form input#target_title').val('');
 					$('#new-target-form select#new-target-smt').val(0);
