--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 <div id="dialog-alert" style="display: none;" title="Alert">
 	<p class="alert"><%= alert %></p>
 </div> -->
+<a href="https://github.com/asterisklabs/ssa"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 <div class="container">
 
