Changed the loading Modal back to include fade - otherwise it didnt appear to .. appear ..

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -133,7 +133,7 @@
 		</div>
 	</div>
 
-	<div id="loadingModal" class="modal hide" tabindex="-1" role="dialog" area-labelledby="Something" aria-hidden="true">
+	<div id="loadingModal" class="modal hide fade" tabindex="-1" role="dialog" area-labelledby="Something" aria-hidden="true">
 		<div class="modal-header">
 			<h3>Loading</h3>
 		</div>
